--- a/angular.json
+++ b/angular.json
@@ -4,15 +4,15 @@
     "newProjectRoot": "projects",
     "projects": {
         "eh-tag-editor": {
-            "root": "",
-            "sourceRoot": "src/browser",
             "projectType": "application",
-            "prefix": "app",
             "schematics": {
                 "@schematics/angular:component": {
                     "style": "sass"
                 }
             },
+            "root": "",
+            "sourceRoot": "src/browser",
+            "prefix": "app",
             "architect": {
                 "build": {
                     "builder": "@angular-devkit/build-angular:browser",
@@ -22,6 +22,7 @@
                         "main": "src/browser/main.ts",
                         "polyfills": "src/browser/polyfills.ts",
                         "tsConfig": "src/browser/tsconfig.json",
+                        "aot": true,
                         "assets": ["src/browser/favicon.ico", "src/browser/favicon.svg", "src/browser/assets"],
                         "styles": [
                             "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
@@ -38,21 +39,24 @@
                                     "with": "src/browser/environments/environment.prod.ts"
                                 }
                             ],
-                            "commonChunk": true,
-                            "vendorChunk": true,
-                            "namedChunks": false,
                             "optimization": true,
                             "outputHashing": "all",
                             "sourceMap": true,
                             "extractCss": true,
-                            "aot": true,
+                            "namedChunks": false,
                             "extractLicenses": true,
+                            "vendorChunk": false,
                             "buildOptimizer": true,
                             "budgets": [
                                 {
                                     "type": "initial",
                                     "maximumWarning": "2mb",
                                     "maximumError": "5mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "6kb",
+                                    "maximumError": "10kb"
                                 }
                             ]
                         }
