--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build:server": "nest build",
         "start:tool": "yarn build:tool --watch",
         "build:tool": "tsc --project ./src/tool",
-        "tool": "node ./dist/tool/main.js",
+        "tool": "node ./dist/tool",
         "start:browser": "ng serve",
         "build:browser": "ng build --prod",
         "analyze:browser": "webpack-bundle-analyzer --mode=static --default-sizes=gzip  --report=dist/browser/report.html dist/browser/stats.json",
@@ -54,6 +54,7 @@
         "parse5": "^6.0.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.6.0",
+        "simple-git": "^2.11.0",
         "source-map-support": "^0.5.19",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.3"
