--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "@nestjs/swagger": "^4.5.12",
         "@octokit/auth-app": "^2.4.7",
         "@octokit/rest": "^18.0.0",
+        "axios": "^0.19.2",
         "bluebird": "^3.7.2",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
