--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "bluebird": "^3.7.2",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
+        "cli-color": "^2.0.0",
         "commander": "^5.1.0",
         "escape-string-regexp": "^4.0.0",
         "fastify-swagger": "^2",
@@ -71,6 +72,7 @@
         "@nestjs/schematics": "^7.0.1",
         "@nestjs/testing": "^7.3.2",
         "@types/bluebird-global": "^3.5.12",
+        "@types/cli-color": "^2.0.0",
         "@types/fs-extra": "^9.0.1",
         "@types/js-yaml": "^3.12.5",
         "@types/markdown-it": "^10.0.1",
