--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,5 +1,14 @@
 singleQuote: true
 trailingComma: all
-tabWidth: 4
+tabWidth: 2
 endOfLine: lf
 printWidth: 120
+overrides:
+  - files:
+      - '*.js'
+      - '*.ts'
+      - '*.jsx'
+      - '*.tsx'
+      - '*.vue'
+    options:
+      tabWidth: 4
