--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
     "test:server": "jest --config ./src/server/jest.config.js",
+    "heroku-postbuild": "yarn build:server",
     "start:tool": "yarn build:tool --watch",
     "build:tool": "tsc --project ./src/tool",
     "test:tool": "yarn tool --help",
