--- a/package.json
+++ b/package.json
@@ -22,22 +22,13 @@
   "dependencies": {
     "@actions/core": "^1.2.4",
     "@actions/exec": "^1.0.4",
-    "@angular/animations": "^10.0.8",
-    "@angular/cdk": "^10.1.2",
-    "@angular/common": "^10.0.8",
-    "@angular/compiler": "^10.0.8",
-    "@angular/core": "^10.0.8",
-    "@angular/forms": "^10.0.8",
-    "@angular/material": "^10.1.2",
-    "@angular/platform-browser": "^10.0.8",
-    "@angular/platform-browser-dynamic": "^10.0.8",
-    "@angular/router": "^10.0.8",
     "@nestjs/common": "^7.4.2",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.4.2",
     "@nestjs/platform-fastify": "^7.4.2",
     "@nestjs/swagger": "^4.5.12",
     "@octokit/auth-app": "^2.4.13",
+    "@octokit/auth-oauth-app": "^3.0.5",
     "@octokit/rest": "^18.0.3",
     "axios": "^0.19.2",
     "bluebird": "^3.7.2",
@@ -53,7 +44,6 @@
     "lazysizes": "^5.2.2",
     "linkify-it": "^3.0.2",
     "markdown-it": "^11.0.0",
-    "material-design-icons": "^3.0.1",
     "node-cache": "^5.1.2",
     "pako": "^1.0.11",
     "parse5": "^6.0.0",
@@ -61,14 +51,23 @@
     "rxjs": "^6.6.2",
     "simple-git": "^2.17.0",
     "source-map-support": "^0.5.19",
-    "tslib": "^2.0.0",
-    "zone.js": "^0.10.3"
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/animations": "^10.0.8",
+    "@angular/cdk": "^10.1.2",
     "@angular/cli": "^10.0.5",
+    "@angular/common": "^10.0.8",
+    "@angular/compiler": "^10.0.8",
     "@angular/compiler-cli": "^10.0.8",
+    "@angular/core": "^10.0.8",
+    "@angular/forms": "^10.0.8",
     "@angular/language-service": "^10.0.8",
+    "@angular/material": "^10.1.2",
+    "@angular/platform-browser": "^10.0.8",
+    "@angular/platform-browser-dynamic": "^10.0.8",
+    "@angular/router": "^10.0.8",
     "@nestjs/cli": "^7.4.1",
     "@nestjs/schematics": "^7.0.1",
     "@nestjs/testing": "^7.4.2",
@@ -90,6 +89,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.2.2",
     "jest-to-match-shape-of": "^1.3.0",
+    "material-design-icons": "^3.0.1",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
@@ -99,6 +99,7 @@
     "tsconfig-paths": "^3.9.0",
     "type-fest": "^0.16.0",
     "typescript": "^3.9.7",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "webpack-bundle-analyzer": "^3.8.0",
+    "zone.js": "^0.10.3"
   }
 }
