--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "linkify-it": "~5.0.0",
     "markdown-it": "~14.1.0",
     "node-cache": "~5.1.2",
-    "parse5": "~7.3.0",
+    "parse5": "~8.0.0",
     "reflect-metadata": "~0.2.2",
     "rxjs": "~7.8.2",
     "simple-git": "~3.28.0",
@@ -78,6 +78,7 @@
     "@angular/router": "^20.1.6",
     "@angular/service-worker": "^20.1.6",
     "@commander-js/extra-typings": "^14.0.0",
+    "@eslint/js": "^9.33.0",
     "@nestjs/cli": "~11.0.10",
     "@nestjs/schematics": "~11.0.7",
     "@nestjs/testing": "~11.1.6",
