--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "emitDecoratorMetadata": false,
+    "isolatedModules": false,
+    "emitDecoratorMetadata": true,
     "paths": {
       "#*": ["./*"]
     }
