--- a/fly.toml
+++ b/fly.toml
@@ -7,40 +7,41 @@ app = "ehtt"
 primary_region = "hkg"
 kill_signal = "SIGINT"
 kill_timeout = "5s"
+swap_size_mb = 512
 
 [experimental]
-  auto_rollback = true
+auto_rollback = true
 
 [env]
-  DB_PATH = "/db"
-  DB_REPO = "EhTagTranslation/Database"
-  PORT = "8080"
+DB_PATH = "/db"
+DB_REPO = "EhTagTranslation/Database"
+PORT = "8080"
 
 [[mounts]]
-  source = "ehtt_db_machines"
-  destination = "/db"
-  processes = ["app"]
+source = "ehtt_db_machines"
+destination = "/db"
+processes = ["app"]
 
 [[services]]
-  protocol = "tcp"
-  internal_port = 8080
-  processes = ["app"]
+protocol = "tcp"
+internal_port = 8080
+processes = ["app"]
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-    force_https = true
+[[services.ports]]
+port = 80
+handlers = ["http"]
+force_https = true
 
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
+[[services.ports]]
+port = 443
+handlers = ["tls", "http"]
+[services.concurrency]
+type = "connections"
+hard_limit = 25
+soft_limit = 20
 
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "10s"
-    restart_limit = 0
+[[services.tcp_checks]]
+interval = "15s"
+timeout = "2s"
+grace_period = "10s"
+restart_limit = 0
