--- a/package.json
+++ b/package.json
@@ -27,82 +27,82 @@
   },
   "private": true,
   "dependencies": {
-    "@actions/core": "~2.0.2",
-    "@actions/exec": "~2.0.0",
-    "@actions/http-client": "~3.0.2",
+    "@actions/core": "^3.0.0",
+    "@actions/exec": "^3.0.0",
+    "@actions/http-client": "^4.0.0",
     "@fastify/static": "^9.0.0",
-    "@nestjs/common": "~11.1.12",
-    "@nestjs/config": "~4.0.2",
-    "@nestjs/core": "~11.1.12",
-    "@nestjs/platform-fastify": "~11.1.12",
-    "@nestjs/swagger": "~11.2.5",
-    "@octokit/auth-app": "~8.1.2",
-    "@octokit/auth-oauth-app": "~9.0.3",
+    "@nestjs/common": "^11.1.13",
+    "@nestjs/config": "^4.0.3",
+    "@nestjs/core": "^11.1.13",
+    "@nestjs/platform-fastify": "^11.1.13",
+    "@nestjs/swagger": "^11.2.6",
+    "@octokit/auth-app": "^8.2.0",
+    "@octokit/auth-oauth-app": "^9.0.3",
     "@octokit/request-error": "^7.1.0",
-    "@octokit/rest": "~22.0.1",
-    "axios": "~1.13.4",
-    "class-transformer": "~0.5.1",
-    "class-validator": "~0.14.3",
-    "cli-color": "~2.0.4",
-    "commander": "~14.0.2",
-    "escape-string-regexp": "~5.0.0",
-    "fastify": "^5.7.2",
-    "fs-extra": "~11.3.3",
-    "idb-keyval": "~6.2.2",
-    "js-yaml": "~4.1.1",
-    "lazysizes": "~5.3.2",
-    "linkify-it": "~5.0.0",
-    "markdown-it": "~14.1.0",
-    "node-cache": "~5.1.2",
-    "parse5": "~8.0.0",
-    "reflect-metadata": "~0.2.2",
-    "rxjs": "~7.8.2",
-    "simple-git": "~3.30.0",
-    "tslib": "~2.8.1"
+    "@octokit/rest": "^22.0.1",
+    "axios": "^1.13.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "cli-color": "^2.0.4",
+    "commander": "^14.0.3",
+    "escape-string-regexp": "^5.0.0",
+    "fastify": "^5.7.4",
+    "fs-extra": "^11.3.3",
+    "idb-keyval": "^6.2.2",
+    "js-yaml": "^4.1.1",
+    "lazysizes": "^5.3.2",
+    "linkify-it": "^5.0.0",
+    "markdown-it": "^14.1.0",
+    "node-cache": "^5.1.2",
+    "parse5": "^8.0.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "simple-git": "^3.30.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@angular/animations": "^21.1.1",
-    "@angular/build": "^21.1.1",
+    "@angular/animations": "^21.1.3",
+    "@angular/build": "^21.1.3",
     "@angular/cdk": "^16.2.14",
-    "@angular/cli": "^21.1.1",
-    "@angular/common": "^21.1.1",
-    "@angular/compiler": "^21.1.1",
-    "@angular/compiler-cli": "^21.1.1",
-    "@angular/core": "^21.1.1",
-    "@angular/forms": "^21.1.1",
-    "@angular/language-service": "^21.1.1",
+    "@angular/cli": "^21.1.3",
+    "@angular/common": "^21.1.3",
+    "@angular/compiler": "^21.1.3",
+    "@angular/compiler-cli": "^21.1.3",
+    "@angular/core": "^21.1.3",
+    "@angular/forms": "^21.1.3",
+    "@angular/language-service": "^21.1.3",
     "@angular/material": "^16.2.14",
-    "@angular/platform-browser": "^21.1.1",
-    "@angular/platform-browser-dynamic": "^21.1.1",
-    "@angular/router": "^21.1.1",
-    "@angular/service-worker": "^21.1.1",
+    "@angular/platform-browser": "^21.1.3",
+    "@angular/platform-browser-dynamic": "^21.1.3",
+    "@angular/router": "^21.1.3",
+    "@angular/service-worker": "^21.1.3",
     "@commander-js/extra-typings": "^14.0.0",
     "@eslint/js": "^9.39.2",
-    "@nestjs/cli": "~11.0.16",
-    "@nestjs/schematics": "~11.0.9",
-    "@nestjs/testing": "~11.1.12",
-    "@types/cli-color": "~2.0.6",
-    "@types/fs-extra": "~11.0.4",
-    "@types/jest": "~30.0.0",
-    "@types/js-yaml": "~4.0.9",
-    "@types/markdown-it": "~14.1.2",
-    "@types/node": "~25.0.10",
-    "@types/supertest": "~6.0.3",
-    "dotenv": "^17.2.3",
-    "esbuild": "^0.27.2",
-    "eslint": "~9.39.2",
-    "eslint-config-prettier": "~10.1.8",
+    "@nestjs/cli": "^11.0.16",
+    "@nestjs/schematics": "^11.0.9",
+    "@nestjs/testing": "^11.1.13",
+    "@types/cli-color": "^2.0.6",
+    "@types/fs-extra": "^11.0.4",
+    "@types/jest": "^30.0.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^25.2.1",
+    "@types/supertest": "^6.0.3",
+    "dotenv": "^17.2.4",
+    "esbuild": "^0.27.3",
+    "eslint": "^9.39.2",
+    "eslint-config-prettier": "^10.1.8",
     "fflate": "^0.8.2",
-    "jest": "~30.2.0",
-    "jest-to-match-shape-of": "~1.3.2",
+    "jest": "^30.2.0",
+    "jest-to-match-shape-of": "^1.3.2",
     "material-design-icons": "^3.0.1",
-    "prettier": "~3.8.1",
-    "rimraf": "~6.1.2",
-    "supertest": "~7.2.2",
-    "ts-jest": "~29.4.6",
-    "type-fest": "~5.4.2",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "~8.54.0",
-    "zone.js": "~0.16.0"
+    "prettier": "^3.8.1",
+    "rimraf": "^6.1.2",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
+    "type-fest": "^5.4.3",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0",
+    "zone.js": "^0.16.0"
   }
 }
